<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ModifyingActivity">

    <TextView
        android:id="@+id/connectionStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/off_seekbar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rotation_off" />

    <com.azazo1.bleswitchlight.MySeekbar
        android:id="@+id/modifierOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/on_seekbar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rotation_on" />

    <com.azazo1.bleswitchlight.MySeekbar
        android:id="@+id/modifierOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/plain_seekbar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rotation_plain" />

    <com.azazo1.bleswitchlight.MySeekbar
        android:id="@+id/modifierPlain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/modifyApply"
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" />


    <TextView
        android:id="@+id/previewer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/preview" />

    <com.azazo1.bleswitchlight.MySeekbar
        android:id="@+id/previewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp" />
</LinearLayout>